[package]
name = "dlopen2"
version = "0.5.0"
authors = [
    "Szymon Wieloch <szymon.wieloch@gmail.com>",
    "Ahmed Masud <ahmed.masud@saf.ai>",
    "OpenByte <development.openbyte@gmail.com>"]
description = "Library for opening and operating on dynamic link libraries (also known as shared objects or shared libraries)."
keywords = [
    #common functions
    "dlopen", "dll", "so", "dylib", "shared"]
license = "MIT"
repository = "https://github.com/OpenByteDev/dlopen2"
edition = "2021"

[dependencies]
dlopen2_derive = { path = "dlopen2-derive", version = "0.3", optional = true }
once_cell = "1.18"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "minwindef", "winerror", "libloaderapi", "errhandlingapi", "dbghelp", "processthreadsapi", "basetsd"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
const-cstr = "0.3"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
example_dylib = { path = "example-dylib" }
current_platform = "0.2"


[features]
default = ["wrapper", "symbor", "derive"]
wrapper = []
symbor = []
derive = ["dlopen2_derive"]
doc_cfg = []


[[example]]
name = "raw"
crate-type = ["bin"]

[[example]]
name = "symbor"
crate-type = ["bin"]

[[example]]
name = "symbor_api"
crate-type = ["bin"]

[[example]]
name = "wrapper_api"
crate-type = ["bin"]

[[example]]
name = "raw_addr_info"
crate-type = ["bin"]

[[example]]
name = "wrapper_multi_api"
crate-type = ["bin"]


[package.metadata.docs.rs]
all-features = true
