[package]
name = "dlopen2_derive"
version = "0.3.0"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>",
           "OpenByte <development.openbyte@gmail.com>"]
description = "Derive macros for the dlopen2 crate."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
