[package]
name = "dlopen2_derive"
version = "0.4.0"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>",
           "OpenByte <development.openbyte@gmail.com>"]
description = "Derive macros for the dlopen2 crate."
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
