[package]
name = "dlopen_derive"
version = "0.1.4"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>",
           "OpenByte <development.openbyte@gmail.com>"]
description = "Derive macros for the dlopen crate."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
